<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scr_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <li.itcc.hackathon15.guiutil.SquareImageView
                android:id="@+id/img_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="#ffffffdd" />

            <EditText
                android:id="@+id/etx_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:hint="@string/name" />


            <RatingBar
                android:id="@+id/rbr_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/etx_comment"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:hint="@string/description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginRight="5dp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/delete_warning"
                android:layout_marginTop="10dp" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/viw_take_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_camera_alt_white_24dp"
            app:layout_anchor="@id/img_image"
            app:layout_anchorGravity="bottom|right|end" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/viw_open_galery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_collections_white_24dp"
            app:layout_anchor="@id/img_image"
            app:layout_anchorGravity="bottom|left|end" />


    </android.support.design.widget.CoordinatorLayout>

</ScrollView>